# ClarabelDocs

./: .gitignore  CNAME  Project.toml  README.md  versions.js
dev/: index.html  search_index.js
dev/api/: index.html
dev/api-jl/: index.html
dev/api-rs/: index.html
dev/api_jl/: index.html
dev/api_rs/: index.html
dev/api_settings/: index.html
dev/citing/: index.html
dev/contributing/: index.html
dev/getting_started/: index.html
dev/jump/: index.html
dev/linear_solvers/: index.html
dev/method/: index.html
dev/search/: index.html
dev/user_guide_r/: index.html
docs/: Project.toml  make.jl  make_examples_julia.jl  md_include.jl  pages.jl
docs/src/: api-jl.md  api-rs.md  api_cone_types.md  api_jl.md  api_rs.md  api_settings.md  citing.md  contributing.md  index.md  user_guide_c_cpp.md  user_guide_callbacks.md  user_guide_chordal.md  user_guide_data_updating.md  user_guide_linsolvers.md  user_guide_r.md
examples/rs/example_SOCP/: Cargo.toml
examples/rs/example_SOCP/src/: main.rs
src/: ClarabelDocs.jl
tests/: runtests.jl
v0.1.0/: index.html
v0.11.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.2.0/: index.html  search_index.js
v0.3.0/: index.html  search_index.js
v0.4.0/: index.html
v0.4.1/: index.html  search_index.js
v0.6.0/: .documenter-siteinfo.json  index.html  search_index.js
v0.8.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.8.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.9.0/: .documenter-siteinfo.json  index.html  objects.inv
(+475 files in other folders)
